--- a/src/view/ckeditor.html
+++ b/src/view/ckeditor.html
@@ -5,11 +5,13 @@
         <div class="help-block">{$help}</div>
         {/notempty}
         {if isset($required)}<input type="hidden" required>{/if}
-        <textarea name="{$name}" placeholder="{:lang('build_view_please_input')}{$label}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_input')}{$label}" class="layui-textarea">{$value}</textarea>
+        <textarea name="{$name}" placeholder="{:lang('build_view_please_input')}{$label}" data-name="name_{$build_view_rand}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_input')}{$label}" class="layui-textarea">{$value}</textarea>
     </div>
 </div>
 <script>
     require(['ckeditor'], function () {
-        window.createEditor('textarea[name="{$name}"]', {height: {$height|default='500'}});
+        let i = Math.ceil(Math.random()*10000000);
+        $('[data-name=name_{$build_view_rand}]').attr('id','build_id_'+i);
+        window.createEditor('#'+'build_id_'+i, {height: {$height|default='500'}});
     });
 </script>
