--- a/src/view/image.html
+++ b/src/view/image.html
@@ -2,16 +2,18 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {if isset($required)}<input type="hidden" required>{/if}
-        <input type="hidden" name="{$name}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" value="{$value}" data-width="{$width|default=''}" data-height="{$height|default=''}">
+        <input type="hidden" name="{$name}" lay-verify="{$layVerify}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" value="{$value}" data-width="{$width|default=''}" data-height="{$height|default=''}">
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
     </div>
 </div>
 <script>
-    {if isset($multiple)}
-    $('input[type=hidden][name="{$name}"]').uploadMultipleImage();
-    {else/}
-        $('input[type=hidden][name="{$name}"]').uploadOneImage();
-        {/if}
+    let i = Math.ceil(Math.random()*10000000);
+    $('[data-name=name_{$build_view_rand}]').attr('id','build_id_'+i);
+    /*{if isset($multiple)}*/
+    $('#build_id_'+i).uploadMultipleImage();
+    /*{else/}*/
+    $('#build_id_'+i).uploadOneImage();
+    /*{/if}*/
 </script>
