--- a/src/view/radio.html
+++ b/src/view/radio.html
@@ -2,10 +2,19 @@
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {foreach $options as $key=>$val}
-        <input type="radio" style="display:none!important;" {$required} name="{$name}" lay-filter="{$name}" title="{$val}" {eq name="$key" value="$value"}checked{/eq} value="{$key}"/>
+        <input type="radio" style="display:none!important;" {$required} name="{$name}" data-name="name_{$build_view_rand}"  title="{$val}" {eq name="$key" value="$value"}checked{/eq} value="{$key}"/>
         {/foreach}
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
     </div>
 </div>
+<script>
+    let i = Math.ceil(Math.random()*10000000)
+    $('[data-name=name_{$build_view_rand}]').attr('lay-filter','build_id_'+i);
+    let name = $('[data-name=name_{$build_view_rand}]').attr('name');
+    if(name.indexOf('[]') > -1){
+        name = name.replace('[]','');
+        $('[data-name=name_{$build_view_rand}]').attr('name',name+'['+i+']');
+    }
+</script>
