--- a/src/view/select.html
+++ b/src/view/select.html
@@ -1,7 +1,7 @@
 <div class="layui-form-item">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
-        <select name="{$name}" lay-filter="{$name}" lay-verify="{$layVerify}" lay-verType="tips" lay-reqText="{:lang('build_view_please_select')}{$label}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
+        <select name="{$name}" lay-filter="{$name}" lay-verify="{$layVerify}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
         <option value="">{:lang('build_view_please_select')}{$label}</option>
         <!--{foreach $options as $key=>$val}-->
             <option value="{$key}" {eq name="$value" value="$key"}selected{/eq}>{$val}</option>
@@ -12,9 +12,13 @@
         <!--{/notempty}-->
     </div>
 </div>
-<!--{if isset($load)}-->
+
 <script type="text/javascript">
-form.on('select({$name})', function(data){
+    let i = Math.ceil(Math.random()*10000000)
+    $('[data-name=name_{$build_view_rand}]').attr('lay-filter','build_id_'+i);
+    $('[data-name=name_{$build_view_rand}]').attr('xm-select','build_id_'+i);
+    /*{if isset($load)}*/
+form.on('select(build_id_'+i+')', function(data){
     $.post("{:url($load[1])}",{q:data.value},function(result,status){
         var data = result.data;
         var str = '';
@@ -25,13 +29,11 @@ form.on('select({$name})', function(data){
         form.render('select'); 
     });
 });
-</script>
-<!--{/if}-->
-<!--{if isset($multiple)}-->
-<script type="text/javascript">
+/*{/if}*/
+    /*{if isset($multiple)}*/
     var formSelects = layui.formSelects;
-    formSelects.render('{$name}',{
+    formSelects.render('build_id_'+i,{
         init:{$value|raw|json_encode},
     });
+    /*{/if}*/
 </script>
-<!--{/if}-->
