--- a/src/view/switch.html
+++ b/src/view/switch.html
@@ -1,26 +1,30 @@
 <div class="layui-form-item">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
-        <input type="checkbox" style="display:none!important;" lay-filter="switch-{$name}" {$required}name="switch-{$name}" {eq name="$value" value="$swithcStates['on']['value']|default='1'"}checked{/eq} lay-text="{$swithcStates['on']['text']|default=lang('build_view_grid_switch_on')}|{$swithcStates['off']['text']|default=lang('build_view_grid_switch_off')}" lay-skin="switch">
-        <input name="{$name}" type="hidden" value="{$value}">
+        <input type="checkbox" style="display:none!important;" lay-filter="switch-{$name}"  data-name="name_{$build_view_rand}" {$required} {eq name="$value" value="$swithcStates['on']['value']|default='1'"}checked{/eq} lay-text="{$swithcStates['on']['text']|default=lang('build_view_grid_switch_on')}|{$swithcStates['off']['text']|default=lang('build_view_grid_switch_off')}" lay-skin="switch">
+        <input name="{$name}" type="hidden" data-name="input_{$build_view_rand}" value="{$value}">
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
     </div>
 </div>
 <script>
-     {eq name="$value" value="$swithcStates['on']['value']|default='1'"}
-        $('input[name={$name}]').val('{$value}');
-     {else/}
-         $('input[name={$name}]').val("{$swithcStates['off']['value']|default='-1'}");
-         {/eq}
-    form.on('switch(switch-{$name})', function(data){
+    let i = Math.ceil(Math.random()*10000000)
+    $('[data-name=name_{$build_view_rand}]').attr('id','build_id_'+i);
+    $('[data-name=name_{$build_view_rand}]').attr('lay-filter','build_id_'+i);
+    $('[data-name=input_{$build_view_rand}]').attr('id','input_build_id_'+i);
+     /*{eq name="$value" value="$swithcStates['on']['value']|default='1'"}*/
+        $('#'+'build_id_'+i).val('{$value}');
+    /* {else/}*/
+         $('#'+'build_id_'+i).val("{$swithcStates['off']['value']|default='-1'}");
+         /*{/eq}*/
+    form.on('switch(build_id_'+i+')', function(data){
         var value ='';
         if(data.elem.checked){
             value = "{$swithcStates['on']['value']|default='1'}";
         }else{
             value = "{$swithcStates['off']['value']|default='-1'}";
         }
-        $('input[name={$name}]').val(value);
+        $('#input_build_id_'+i).val(value);
     });
 </script>
