调整，新增layui 时间线

--- a/src/view/button.html
+++ b/src/view/button.html
@@ -1,1 +1,1 @@
-<button class="layui-btn {$size} {$color} {$radius}" {$id|raw} {$field|raw} {$value|raw} {$tager|raw} type="button">{$icon|raw}{$label}</button>
+<button class="layui-btn {$size} {$color} {$radius}" {$id|raw} {$field|raw} {$value|raw} {$tager|raw} type="button" data-title="{$label}">{$icon|raw}{$label}</button>
