--- a/src/view/slider.html
+++ b/src/view/slider.html
@@ -1,5 +1,5 @@
-<div class="layui-form-item">
-    <label class="layui-form-label color-green">{$label}</label>
+<div class="layui-form-item layui-form-text">
+    <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         <input readonly autocomplete="off" type="text" {$required}name="{$name}" data-name="name_{$build_view_rand}" value="{$value}"  placeholder="{:lang('build_view_please_input')}{$label}" class="layui-input">
         <div id="silder_{$build_view_rand}"></div>
@@ -18,6 +18,7 @@
         //渲染
         slider.render({
             elem: '#'+'build_name_'+i
+            ,theme:"{$color|default='#18BC9C'}"
             ,min:{$min|default='1'}
             ,max:{$max|default='100'}
             ,value:'{$value}'
