--- a/src/view/tab.html
+++ b/src/view/tab.html
@@ -1,4 +1,4 @@
-<div class="layui-tab">
+<div class="layui-tab layui-tab-brief">
     <ul class="layui-tab-title">
         {foreach $tabTitles as $key=>$title}
         <li {eq name="$key" value="0"}class="layui-this"{/eq}>{$title}</li>
