--- a/src/view/distpicker.html
+++ b/src/view/distpicker.html
@@ -1,10 +1,7 @@
-
-
-
 <link href="/vendor/rockys/build-view/src/plugs/city-picker/city-picker.css" rel="stylesheet">
 <script src="/vendor/rockys/build-view/src/plugs/city-picker/city-picker.data.js"></script>
 <script src="/vendor/rockys/build-view/src/plugs/city-picker/city-picker.js"></script>
-<div class="layui-form-item">
+<div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         <input type="text" autocomplete="on" class="layui-input" data-name="name_{$build_view_rand}"  readonly="readonly" data-toggle="city-picker" placeholder="{:lang('build_view_please_select')}{$label}">
