--- a/src/view/filter.html
+++ b/src/view/filter.html
@@ -19,6 +19,14 @@
         border-color: initial;
         border-image: initial;
     }
+    .layui-form-pane .layui-form-text .layui-form-label  {
+        float:left;
+        clear: none;
+    }
+    .layui-form-pane .layui-form-text .layui-input-inline{
+        top:0;
+        clear: none;
+    }
 </style>
 <fieldset class="layui-elem-field" >
     <legend style="margin-bottom:0px">{:lang('build_view_filter_search_desc')}</legend>
