--- a/src/view/radio.html
+++ b/src/view/radio.html
@@ -1,4 +1,4 @@
-<div class="layui-form-item">
+<div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {foreach $options as $key=>$val}
