--- a/src/view/select.html
+++ b/src/view/select.html
@@ -1,4 +1,4 @@
-<div class="layui-form-item">
+<div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         <select name="{$name}" lay-filter="{$name}" lay-verify="{$layVerify}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" lay-search {$required} {if isset($multiple)}xm-select="{$name}" xm-select-search{/if}>
