--- a/src/view/file.html
+++ b/src/view/file.html
@@ -36,13 +36,19 @@ if(!isset($uptype)){
                 apply(that, null, callback);
             })
         };
-    $('#build_id_'+i).uploadFiles(function(url){
+    $('#build_id_'+i).uploadFiles(function(filename,url){
+        /*{if !isset($baseUrl) && $uptype == 'local'}*/
+        let val = filename;
+        /*{else/}*/
+        let val = url;
+        /*{/if}*/
         /*{if isset($multiple)}*/
         if($("input[name={$name}]").val() != ''){
-            url =$("input[name={$name}]").val()  +'|'+ url;
+            val =$("input[name={$name}]").val()  +'|'+ val;
         }
         /*{/if}*/
-        $("input[name={$name}]").val(url);
+
+        $("input[name={$name}]").val(val);
         $('#build_id_'+i).prev('i').addClass('color-green layui-icon-vercode').removeClass('layui-icon-upload-drag');
         $('#build_id_'+i).prev('i').prev('i').show();
     });
