--- a/src/view/image.html
+++ b/src/view/image.html
@@ -8,11 +8,20 @@
         background-size: 100% 100%;
     }
 </style>
+{php}
+if(!isset($uptype)){
+if(function_exists('sysconf')){
+$uptype = sysconf('storage_type');
+}else{
+$uptype = 'local';
+}
+}
+{/php}
 <div class="layui-form-item layui-form-text">
     <label class="layui-form-label">{$label}</label>
     <div class="layui-input-{$layui}">
         {if isset($required)}<input type="hidden" required>{/if}
-        <input type="hidden" name="{$name}" lay-verify="{$layVerify}" data-uptype="{$uptype|default='local'}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" value="{$value}" data-width="{$size[0]|default=''}" data-height="{$size[1]|default=''}">
+        <input type="hidden" name="{$name}" lay-verify="{$layVerify}" data-uptype="{$uptype}" lay-verType="tips" data-name="name_{$build_view_rand}" lay-reqText="{:lang('build_view_please_select')}{$label}" value="{$value}" data-width="{$size[0]|default=''}" data-height="{$size[1]|default=''}">
         {notempty name="$help"}
         <div class="help-block">{$help}</div>
         {/notempty}
@@ -24,22 +33,29 @@
         var that = this, mode = $(this).attr('data-file') || 'one';
         this.attr('data-inited', true).attr('data-multiple', (mode !== 'btn' && mode !== 'one') ? 1 : 0);
         require(['/vendor/build-view/plugs/plupload/build.js'], function (apply) {
-            apply(that, null, callback);
+            apply(that, null, function(filename,url){
+                $('[name="{$name}"]').attr('data-url',url);
+                /*{if !isset($baseUrl) && $uptype == 'local'}*/
+                $('[name="{$name}"]').val(filename).trigger('change');
+                /*{else/}*/
+                $('[name="{$name}"]').val(url).trigger('change');
+                /*{/if}*/
+            });
         })
     };
     /*! 上传单个图片 */
     $.fn.uploadOneImages = function () {
         var name = $(this).attr('name') || 'image', type = $(this).data('type') || 'png,jpg,gif',width = $(this).data('width') || '',height = $(this).data('height') || '',uptype = $(this).data('uptype');
-        var $tpl = $('<a data-file="btn" class="uploadimages"></a>').attr('data-field', name).attr('data-type', type).attr('data-width', width).attr('data-height', height).attr('data-uptype', uptype).attr('data-safe','{if !isset($baseUrl)}true{/if}');
+        var $tpl = $('<a data-file="btn" class="uploadimages"></a>').attr('data-field', name).attr('data-type', type).attr('data-width', width).attr('data-height', height).attr('data-uptype', uptype);
         $(this).attr('name', name).after($tpl.data('input', this)).on('change', function () {
-            if (this.value) $tpl.css('backgroundImage', 'url(' + this.value + ')');
+            if ($(this).data('url')) $tpl.css('backgroundImage', 'url(' + $(this).data('url') + ')');
         }).trigger('change');
     };
 
     /*! 上传多个图片 */
     $.fn.uploadMultipleImages = function () {
         var type = $(this).data('type') || 'png,jpg,gif', name = $(this).attr('name') || 'umt-image',width = $(this).data('width') || '',height = $(this).data('height') || '',uptype = $(this).data('uptype');
-        var $tpl = $('<a class="uploadimages"></a>').attr('data-file', 'mul').attr('data-field', name).attr('data-type', type).attr('data-width', width).attr('data-height', height).attr('data-uptype', uptype).attr('data-safe','{if !isset($baseUrl)}true{/if}');
+        var $tpl = $('<a class="uploadimages"></a>').attr('data-file', 'mul').attr('data-field', name).attr('data-type', type).attr('data-width', width).attr('data-height', height).attr('data-uptype', uptype);
         $(this).attr('name', name).after($tpl.data('input', this)).on('change', function () {
             var input = this;
             this.setImageData = function () {
